# rtd_theme_updates

./: README.md  dev-requirements.txt  pyproject.toml  setup.py
doc/: conf.py
doc/_build/doctrees/: environment.pickle  index.doctree  page2.doctree  page3.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  page2.html  page3.html  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_static/: jupyter.css
sphinx_rtd_jupyter/: __init__.py  _version.py  layout.html
